--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -6,9 +6,18 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-  The world is your oyster.
+<ion-content padding no-bounce>
+  Drag the toolbar at the bottom of this page.
   <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
+    If you get lost, the
+    <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
   </p>
 </ion-content>
+
+<content-drawer [options]="drawerOptions">
+  <ion-list>
+    <button ion-item *ngFor="let item of items">
+      {{ item }}
+    </button>
+  </ion-list>
+</content-drawer>
